hphp/hack/test/typecheck/reified_generics/is_as_deep_inference_check.php.exp
File "is_as_deep_inference_check.php", line 16, characters 5-6:
Invalid argument (Typing[4110])
  File "is_as_deep_inference_check.php", line 7, characters 12-45:
  Expected `Reified<Reified<Reified<int>>>`
  File "is_as_deep_inference_check.php", line 12, characters 8-9:
  But got `(<expr#5> as I & <expr#5> as Reified<Reified<int>>)` from this "as" assertion
